--- a/cinema3/templates/base/base.html
+++ b/cinema3/templates/base/base.html
@@ -192,6 +192,9 @@
     <!--Contenido-->
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper" style="background: #ecf0f5 !important;">
+           {%block header %}
+
+            {%endblock%}
    
     <!-- Main content -->
         <section class="content" style="background: #ecf0f5 !important;">
