--- a/cinema4/templates/movies/categorias_form.html
+++ b/cinema4/templates/movies/categorias_form.html
@@ -18,7 +18,7 @@
 {%block contenido%}
 
 {% for message in messages %}
-  <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+  <div class="alert {{ message.tags }} alert-dismissible aprobado" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
