--- a/cinema4/templates/servers/server_form.html
+++ b/cinema4/templates/servers/server_form.html
@@ -4,10 +4,10 @@
 {%block header%}
 
 <section class="content-header">
-        <h1>Idioma<small>Agregar</small></h1>
+        <h1>Servidor<small>Agregar</small></h1>
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i>Inicio</a></li>
-            <li class="active">Idioma</li>
+            <li class="active">Servidor</li>
             <li class="active">Agregar</li>
         </ol>
     </section>
@@ -29,7 +29,7 @@
 
  <div class="box box-primary">
         <div class="box-header">
-            <h3 class="box-title">Nuevo Idioma</h3>
+            <h3 class="box-title">Nuevo Servidor</h3>
         </div><!-- /.box-header holaaaa -->
         <div class="box-body">
             <form method="post">
@@ -39,9 +39,5 @@
             </form>
         </div>
     </div>
-
-
-
-
 
 {%endblock%}
