--- a/cinema4/templates/base/base.html
+++ b/cinema4/templates/base/base.html
@@ -56,7 +56,7 @@
                             <small class="bg-red">Online</small>
                            
                                     <td>
-                                        <img src="#" class="user-image" alt="User Image"/>
+                                        <img src="{{ MEDIA_URL }}avatar.png" class="user-image" alt="User Image"/>
                                     </td>
                                 
 
@@ -69,7 +69,7 @@
 
                                   
                                     <td>
-                                        <img src="#" class="img-circle" alt="User Image"/>
+                                        <img src="{{ MEDIA_URL }}avatar.png" class="img-circle" alt="User Image"/>
                                     </td>
                                
 
@@ -109,7 +109,7 @@
                 <div class="pull-left image">
                 
                     <td>
-                        <img src="#" class="img-circle" alt="User Image"/>
+                        <img src="{{ MEDIA_URL }}avatar.png" class="img-circle" alt="User Image"/>
                     </td>
                
                   
@@ -182,7 +182,7 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                           <li><a href="#"><i class="fa fa-list-ul"></i>Listado</a></li>
+                           <li><a href="{% url 'movies:actor_listar' %}"><i class="fa fa-list-ul"></i>Listado</a></li>
                      
                           <li><a href="{% url 'movies:actor_crear' %}"><i class="fa fa-file"></i> Agregar</a></li>
                     
@@ -265,7 +265,7 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                               <li><a href="#"><i class="fa fa-list-ul"></i>Listado</a></li>
+                               <li><a href="{% url 'servers:server_listar' %}"><i class="fa fa-list-ul"></i>Listado</a></li>
                        
                                 <li><a href="{% url 'servers:server_crear' %}"><i class="fa fa-file"></i> Agregar</a></li>
                              
@@ -290,7 +290,7 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="#"><i class="fa fa-list-ul"></i>Listado</a></li>
+                                <li><a href="{% url 'servers:idioma_listar' %}"><i class="fa fa-list-ul"></i>Listado</a></li>
                        
                           <li><a href="{% url 'servers:idioma_crear' %}"><i class="fa fa-file"></i> Agregar</a></li>
                                 
