--- a/cinema4/templates/movies/movies_listar.html
+++ b/cinema4/templates/movies/movies_listar.html
@@ -29,14 +29,14 @@
             <div class="box">
                 <div class="box-header">
                     <div class= "col-xs-6 col-md-6" aling="center">
-                        <h3 class="box-title">Actores Registrados</h3>
+                        <h3 class="box-title">Movies Registrados</h3>
 
                     </div>
                     
                      
                 </div>
                 <!-- /.box-header -->
-               {%if actores %}
+               {%if movies %}
 
                   
 
@@ -45,29 +45,39 @@
                             <table id="example2" class="table table-hover" >
                             <thead>
                                 <tr>
-                                    <th>ID</th>
-                                    <th>Nombre</th>
-                                     <th>Apellido</th>
-                                      <th>Fecha Nacimiento</th>
+                                    <th>Pelicula</th>
+                                    <th>Año</th>
+                                    <th>Descripcion</th>
+                                    <th>Duración</th>
+                                    <th>Portada</th>
+                                    <th>Director</th>
+                                    <th>Categoria</th>
                                     
                                     <th>Acción</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for actor in actores %}
+                                {% for movie in movies %}
                                     
-                                    <tr data-id="{{actor.0}}">
+                                    <tr data-id="{{movie.0}}">
                                         
-                                        <td width="130px">{{ actor.0 }}</td>
-                                        <td width="300px">{{actor.1}}</td>
-                                        <td width="300px">{{actor.2}}</td>
-                                        <td width="300px">{{actor.3}}</td>
+                                        <td width="130px">{{ movie.1 }}</td>
+                                        <td width="300px">{{movie.2}}</td>
+                                         <td width="300px">{{movie.3}}</td>
+                                          <td width="300px">{{movie.4}}</td>
+                                          <td>
+                                            <img src="{{ MEDIA_URL }}{{movie.5}}" alt="" style="width:70px;"/>
+                                        </td>
+                                       
+                                         <td width="300px">{{movie.6}}</td>
+                                          <td width="300px">{{movie.7}}</td>
+                                            
                                        
                                       
                                        
                                         <td>
-                                            <a class="btn btn-primary btn-sm"  href="{% url 'movies:actor_editar' actor.0 %}" ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Editar</button>
-                                            <a class="btn btn-danger btn-sm btn-delete"  ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Eliminar</button>
+                                            <button type="button" class="btn btn-primary btn-sm"  ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Editar</button>
+                                            <button type="button" class="btn btn-danger btn-sm btn-delete"  ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Eliminar</button>
                                         </td>
 
                                     </tr>
@@ -75,22 +85,22 @@
                                {% endfor %}
                              <tbody>
                             </table>
-                           {% if actores.has_other_pages %}
+                           {% if movies.has_other_pages %}
                             <ul class="pagination">
-                                {% if actores.has_previous %}
-                                <li><a href="?page={{ users.previous_page_number }}">&laquo;</a></li>
+                                {% if movies.has_previous %}
+                                <li><a href="?page={{ movies.previous_page_number }}">&laquo;</a></li>
                                 {% else %}
                                 <li class="disabled"><span>&laquo;</span></li>
                                 {% endif %}
-                                {% for i in actores.paginator.page_range %}
-                                {% if actores.number == i %}
+                                {% for i in movies.paginator.page_range %}
+                                {% if movies.number == i %}
                                     <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
                                 {% else %}
                                     <li><a href="?page={{ i }}">{{ i }}</a></li>
                                 {% endif %}
                                 {% endfor %}
-                                {% if actores.has_next %}
-                                <li><a href="?page={{ users.next_page_number }}">&raquo;</a></li>
+                                {% if movies.has_next %}
+                                <li><a href="?page={{ movies.next_page_number }}">&raquo;</a></li>
                                 {% else %}
                                 <li class="disabled"><span>&raquo;</span></li>
                                 {% endif %}
