--- a/cinema4/templates/servers/servers_listar.html
+++ b/cinema4/templates/servers/servers_listar.html
@@ -66,8 +66,8 @@
                                       
                                        
                                         <td>
-                                            <button type="button" class="btn btn-primary btn-sm"  ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Editar</button>
-                                            <button type="button" class="btn btn-danger btn-sm btn-delete"  ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Eliminar</button>
+                                             <a class="btn btn-primary btn-sm"  href="{% url 'servers:server_edit' server.0 %}" ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Editar</button>
+                                            <a class="btn btn-danger btn-sm btn-delete"  ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Eliminar</button>
                                         </td>
 
                                     </tr>
