--- a/cinema2/public/frontend/css/bootstrap.css
+++ b/cinema2/public/frontend/css/bootstrap.css
@@ -1101,7 +1101,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #ffffff;
   text-decoration: none;
 }
 a:hover,
@@ -5536,9 +5536,7 @@ a.list-group-item-danger.active:focus {
 .panel-group .panel-footer + .panel-collapse .panel-body {
   border-bottom: 1px solid #ddd;
 }
-.panel-default {
-  border-color: #ddd;
-}
+
 .panel-default > .panel-heading {
   color: #333;
   background-color: #f5f5f5;
