--- a/cinema2/public/frontend/css/flexslider.css
+++ b/cinema2/public/frontend/css/flexslider.css
@@ -20,7 +20,7 @@
 /* FlexSlider Necessary Styles
 *********************************/ 
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width: 100%; display: block;}
+.flexslider .slides img {width: 100%; display: block;height: 300px;}
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
@@ -41,7 +41,6 @@ html[xmlns] .slides {display: block;}
 	position: relative;
 	zoom: 1;
 	overflow: hidden;
-	padding-top: 2em;
 }
 .flex-viewport {max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease;}
 .loading .flex-viewport {max-height: 300px;}
