--- a/cinema4/templates/base/base.html
+++ b/cinema4/templates/base/base.html
@@ -139,9 +139,9 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                           <li><a href="#"><i class="fa fa-list-ul"></i>Listado</a></li>
+                           <li><a href="http://localhost/optativa/cinema2/public/administracion/usuarios"><i class="fa fa-list-ul"></i>Listado</a></li>
                      
-                          <li><a href="#"><i class="fa fa-file"></i> Agregar</a></li>
+                          <li><a href="http://localhost/optativa/cinema2/public/administracion/usuarios/create"><i class="fa fa-file"></i> Agregar</a></li>
                     
                     </ul>
                 </li>
@@ -215,9 +215,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                               <li><a href="#"><i class="fa fa-list-ul"></i>Listado</a></li>
+                               <li><a href="http://localhost:3000/series"><i class="fa fa-list-ul"></i>Listado</a></li>
                        
-                                <li><a href="#"><i class="fa fa-file"></i> Agregar</a></li>
+                                <li><a href="http://localhost:3000/series/new"><i class="fa fa-file"></i> Agregar</a></li>
                              
                             </ul>
                         </li>
@@ -227,9 +227,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="#"><i class="fa fa-list-ul"></i>Listado</a></li>
+                                <li><a href="http://localhost:3000/seasons"><i class="fa fa-list-ul"></i>Listado</a></li>
                        
-                          <li><a href="#"><i class="fa fa-file"></i> Agregar</a></li>
+                          <li><a href="http://localhost:3000/seasons/new"><i class="fa fa-file"></i> Agregar</a></li>
                                 
                              
                             </ul>
@@ -241,8 +241,8 @@
                             </a>
                            <ul class="treeview-menu">
 
-                                <li><a href="#"><i class="fa fa-list-ul"></i>Aprovados</a></li>
-                                <li><a href="#"><i class="fa fa-list-ul"></i>No Aprobados</a></li>
+                                <li><a href="http://localhost:3000/chapters"><i class="fa fa-list-ul"></i>Listar</a></li>
+                                <li><a href="http://localhost:3000/chapters/new"><i class="fa fa-list-ul"></i>Agregar</a></li>
                        
                        
                                 
@@ -277,9 +277,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                               <li><a href="#"><i class="fa fa-list-ul"></i>Listado</a></li>
+                               <li><a href="http://localhost:3000/serverschapters"><i class="fa fa-list-ul"></i>Listado</a></li>
                        
-                                <li><a href="#"><i class="fa fa-file"></i> Agregar</a></li>
+                                <li><a href="http://localhost:3000/serverschapters/new"><i class="fa fa-file"></i> Agregar</a></li>
                              
                             </ul>
                         </li>
