--- a/cinema/app/views/actors/edit.html.erb
+++ b/cinema/app/views/actors/edit.html.erb
@@ -46,13 +46,13 @@
               </div>
 
               <div class="form-group">
-                <%= f.label :lastname, 'Apellido'  %>
-                <%= f.text_field :lastname, :class => "form-control", :placeholder => "Ingrese el nombre"   %>
+                <%= f.label :last_name, 'Apellido'  %>
+                <%= f.text_field :last_name, :class => "form-control", :placeholder => "Ingrese el nombre"   %>
               </div>
 
               <div class="form-group">
-                <%= f.label :birthday, 'Fecha de Nacimiento'  %>
-                <%= f.date_field :birthday, :class => "form-control", :value => date_mdY(@actor.birthday) %>
+                <%= f.label :birthdate, 'Fecha de Nacimiento'  %>
+                <%= f.date_field :birthdate, :class => "form-control" %>
 
               </div>
 
