--- a/cinema/app/views/actors/index.html.erb
+++ b/cinema/app/views/actors/index.html.erb
@@ -21,8 +21,8 @@
 
                 <tr>
                   <td><%= actor.name %></td>
-                  <td><%= actor.lastname %></td>
-                  <td><%= actor.birthday %></td>
+                  <td><%= actor.last_name %></td>
+                  <td><%= actor.birthdate %></td>
                   <td><%= link_to "Editar", edit_actor_path(actor), class: "btn btn-success btn-sm"%></td>
                   <!--
                   <td> <%=link_to 'Delete', actor, method: :delete, data: { confirm: 'Esta seguror de eliminar el registro?' }%></td>
