--- a/cinema/app/views/seasons/edit.html.erb
+++ b/cinema/app/views/seasons/edit.html.erb
@@ -42,7 +42,7 @@
             <div class="box-body">
               <div class="form-group">
                 <%= f.label :season, 'Nombre'  %>
-                <%= f.text_field :season, :class => "form-control", :placeholder => "Ingrese el nombre"   %>
+                <%= f.text_field :season, :class => "form-control", :placeholder => "Ingrese el nombre"  , :required =>'true' %>
               </div>
 
               <div class="form-group">
@@ -52,7 +52,7 @@
 
               <div class="form-group">
                 <%= f.label :description, 'Descripcion'  %>
-                <%= f.text_field :description, :class => "form-control", :placeholder => "Ingrese la descripcion"   %>
+                <%= f.text_field :description, :class => "form-control", :placeholder => "Ingrese la descripcion" , :required =>'true'  %>
               </div>
 
                            
@@ -61,10 +61,15 @@
                 <%= f.file_field :photo, :class => "form-control"   %>
               </div>
 
+               <div class="form-group">
+                <%= f.label :coverphoto, 'Portada'  %>
+                <%= f.file_field :coverphoto, :class => "form-control"   %>
+              </div>
+
               <div class="form-group">
                 <label>Series</label>
                 <select class="form-control select2" data-placeholder="Seleccione una serie"
-                        style="width: 100%;" name="season[serie_id]">
+                        style="width: 100%;" name="season[serie_id]" required ='true'>
                     <% @series.each do |serie| %>
                           <option value="<%= serie.id%>"><%= serie.name %></option>
 
