--- a/cinema/app/views/seasons/new.html.erb
+++ b/cinema/app/views/seasons/new.html.erb
@@ -42,29 +42,34 @@
             <div class="box-body">
               <div class="form-group">
                 <%= f.label :season, 'Nombre'  %>
-                <%= f.text_field :season, :class => "form-control", :placeholder => "Ingrese el nombre"   %>
+                <%= f.text_field :season, :class => "form-control", :placeholder => "Ingrese el nombre" , :required =>'true'  %>
               </div>
 
               <div class="form-group">
                 <%= f.label :year, 'Fecha'  %>
-                <%= f.date_field :year, :class => "form-control"  %>
+                <%= f.date_field :year, :class => "form-control" , :required =>'true' %>
               </div>
 
               <div class="form-group">
                 <%= f.label :description, 'Descripcion'  %>
-                <%= f.text_field :description, :class => "form-control", :placeholder => "Ingrese la descripcion"   %>
+                <%= f.text_field :description, :class => "form-control", :placeholder => "Ingrese la descripcion", :required =>'true'   %>
               </div>
 
                            
               <div class="form-group">
                 <%= f.label :photo, 'Imagen'  %>
-                <%= f.file_field :photo, :class => "form-control"   %>
+                <%= f.file_field :photo, :class => "form-control", :required =>'true'   %>
+              </div>
+
+              <div class="form-group">
+                <%= f.label :coverphoto, 'Portada'  %>
+                <%= f.file_field :coverphoto, :class => "form-control" , :required =>'true'  %>
               </div>
 
               <div class="form-group">
                 <label>Series</label>
                 <select class="form-control select2" data-placeholder="Seleccione una serie"
-                        style="width: 100%;" name="season[serie_id]">
+                        style="width: 100%;" name="season[serie_id]" required ='true'>
                     <% @series.each do |serie| %>
                           <option value="<%= serie.id%>"><%= serie.name %></option>
 
