--- a/cinema/app/views/series/new.html.erb
+++ b/cinema/app/views/series/new.html.erb
@@ -42,43 +42,43 @@
             <div class="box-body">
               <div class="form-group">
                 <%= f.label :name, 'Nombre'  %>
-                <%= f.text_field :name, :class => "form-control", :placeholder => "Ingrese el nombre"   %>
+                <%= f.text_field :name, :class => "form-control", :placeholder => "Ingrese el nombre" , :required =>'true'   %>
               </div>
 
               <div class="form-group">
                 <%= f.label :year, 'Fecha'  %>
-                <%= f.date_field :year, :class => "form-control"  %>
+                <%= f.date_field :year, :class => "form-control" , :required =>'true'  %>
               </div>
 
               <div class="form-group">
                 <%= f.label :description, 'Descripcion'  %>
-                <%= f.text_field :description, :class => "form-control", :placeholder => "Ingrese la descripcion"   %>
+                <%= f.text_field :description, :class => "form-control", :placeholder => "Ingrese la descripcion" , :required =>'true'   %>
               </div>
 
               <div class="form-group">
                 <%= f.label :director, 'Director'  %>
-                <%= f.text_field :director, :class => "form-control", :placeholder => "Ingrese el director"   %>
+                <%= f.text_field :director, :class => "form-control", :placeholder => "Ingrese el director", :onkeypress => 'return soloLetras(event)', :required =>'true'   %>
               </div>
 
               <div class="form-group">
                 <%= f.label :productora, 'Productora'  %>
-                <%= f.text_field :productora, :class => "form-control", :placeholder => "Ingrese la productora"   %>
+                <%= f.text_field :productora, :class => "form-control", :placeholder => "Ingrese la productora", :onkeypress => 'return soloLetras(event)', :required =>'true'   %>
               </div>
 
               <div class="form-group">
                 <%= f.label :trailer, 'Trailer'  %>
-                <%= f.text_field :trailer, :class => "form-control", :placeholder => "Ingrese la productora"   %>
+                <%= f.text_field :trailer, :class => "form-control", :placeholder => "Ingrese el trailer" , :required =>'true'   %>
               </div>
 
               <div class="form-group">
                 <%= f.label :photo, 'Imagen'  %>
-                <%= f.file_field :photo, :class => "form-control"   %>
+                <%= f.file_field :photo, :class => "form-control" , :required =>'true'  %>
               </div>
 
               <div class="form-group">
                 <label>Categoria</label>
-                <select class="form-control select2" data-placeholder="Select a State"
-                        style="width: 100%;" name="serie[category_id]">
+                <select class="form-control select2" data-placeholder="Seleccione una categoria"
+                        style="width: 100%;" name="serie[category_id]" required="true">
                     <% @categories.each do |category| %>
                           <option value="<%= category.id%>"><%= category.categorie %></option>
 
@@ -87,7 +87,19 @@
                 </select>
               </div>
 
-              
+              <div class="form-group">
+                <label>Actores</label>
+                <select class="form-control select2" data-placeholder="Seleccione los actores"
+                        style="width: 100%;" name="actors[]" multiple="multiple"  required="true">
+                    <% @actors.each do |actor| %>
+                          <option value="<%= actor.id%>"><%= actor.name %></option>
+
+
+                    <% end %>
+                
+
+                </select>
+              </div>
 
 
             </div>
@@ -112,6 +124,9 @@
     $('.select2').select2()
 
   })
+  
+
 </script>
+
 
 <% end %> 
