--- a/cinema2/public/frontend/css/faqstyle.css
+++ b/cinema2/public/frontend/css/faqstyle.css
@@ -54,13 +54,14 @@ input[type="submit"],.agileinfo_chat a,.w3_customer_email_right a,ul.dropdown-me
     display: none;
 }
 .panel-heading {
-    padding:30px 15px;
+    padding:10px 15px;
 }
 .panel-title > a{
     font-size: 1em;
     color:#212121;
     text-transform: capitalize;
 	text-decoration: none;
+	font-weight: bold;
 }
 .panel-default {
     
@@ -69,7 +70,8 @@ input[type="submit"],.agileinfo_chat a,.w3_customer_email_right a,ul.dropdown-me
 .panel-default > .panel-heading {
     border-color: #FFF;
 	color:#212121;
-    background-color: #fff;
+    background-color: #d8d8d8;
+	font-weight: bold;
 }
 .panel-body {
     padding: 2em;
@@ -94,7 +96,7 @@ a.pa_italic:focus {
 /*--- Responsive Code ---*/
 @media screen and (max-width: 640px){
 	.panel-heading {
-		padding: 20px 15px;
+		padding: 15px 15px;
 	}
 }
 @media screen and (max-width: 480px){
