--- a/cinema2/public/frontend/css/jquery-ui.css
+++ b/cinema2/public/frontend/css/jquery-ui.css
@@ -870,6 +870,7 @@ button.ui-button::-moz-focus-inner {
 	border-width: 0;
 	padding: 1em 1.4em;
 	background: none;
+	height: 360px;
 }
 .ui-tooltip {
 	padding: 8px;
