--- a/cinema2/public/frontend/css/style.css
+++ b/cinema2/public/frontend/css/style.css
@@ -194,7 +194,7 @@ ul.dropdown-menu.multi-column ul li a{
 	color:#212121;
 }
 ul.dropdown-menu.multi-column {
-    width: 400px;
+    width: 100%;
     left: 0;
     padding: 1em;
 }
@@ -435,7 +435,7 @@ p.fexi_header_para1 a i {
 /*-- footer --*/
 .footer{
 	background:#212121;
-	padding:4em 0;
+	padding:2em 0;
 }
 .w3ls_footer_grid_left1{
 	position:relative;
