--- a/cinema4/templates/base/base.html
+++ b/cinema4/templates/base/base.html
@@ -153,9 +153,9 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                           <li><a href="#"><i class="fa fa-list-ul"></i>Listado</a></li>
+                           <li><a href="http://localhost/optativa/cinema2/public/administracion/subscripciones"><i class="fa fa-list-ul"></i>Listado</a></li>
                      
-                          <li><a href="#"><i class="fa fa-file"></i> Agregar</a></li>
+                          
                     
                     </ul>
                 </li>
