--- a/cinema2/public/frontend/css/bootstrap.css
+++ b/cinema2/public/frontend/css/bootstrap.css
@@ -3088,8 +3088,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #6f0000;
+  border-color: #6f0000;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -3098,8 +3098,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #6f0000;
+  border-color: #6f0000;
 }
 .btn-primary:active,
 .btn-primary.active,
