--- a/cinema4/templates/servers/idiomas_listar.html
+++ b/cinema4/templates/servers/idiomas_listar.html
@@ -63,7 +63,7 @@
                                        
                                         <td>
                                             <a class="btn btn-primary btn-sm"  href="{% url 'servers:idioma_edit' idioma.0 %}" ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Editar</button>
-                                            <a class="btn btn-danger btn-sm btn-delete"  ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Eliminar</button>
+                                            <a class="btn btn-danger btn-sm"  href="{% url 'servers:idioma_delete' idioma.0 %}" ><i class="zmdi zmdi-floppy"></i> &nbsp;&nbsp;Eliminar</button>
                                         </td>
 
                                     </tr>
